cmake_minimum_required (VERSION 3.1)
project (mpls_tool C)
add_executable(mpls_dump src/mpls_parse.c src/mpls_dump.c src/util.c)
set_property(TARGET mpls_dump PROPERTY C_STANDARD 11)
include_directories(.)
target_link_libraries(mpls_dump PRIVATE m)
set(CMAKE_C_FLAGS_RELEASE "-static")
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
